--- a/dashboard.css
+++ b/dashboard.css
@@ -1,100 +1,82 @@
 /* BODY */
 
 body {
-	color: black; background-color: #E0E0E0;
+	color: black; 
+	background-color: #E0E0E0;
 	font-size: 100.01%;
-	font-family: Tahoma,sans-serif;
-	margin: 0; padding: 0em;
+	font-family: 'Tahoma', sans-serif; 
+	left:0%;
 }
-
 div#site {
-	background-color: #696969;
-	text-align: left;    /* Seiteninhalt wieder links ausrichten */
-	margin: 0 auto;      /* standardkonforme horizontale Zentrierung */
-	width: 640px;
-}
-
-div#back {
-	display:inline;
-	float:left;
-	vertical-align: middle;
-	color: black;
-	font-family: 'Tahoma', sans-serif;
-	font-size: 2em; 
-	float: left;
-	width: 20%;
-	height: 100%;
-	letter-spacing:0.4em; 
-	word-spacing:0.4em;
-	padding-top: 1em;
-	padding-bottom: 1em;
-	padding-left: 1em;
-	padding-right: 1em;
-	font-weight: bold;
-	background-color: #333;
-	border: 1px;
-	border-color: black;
-
-}
-div#back a:link {
-	color: white; background-color: #333;
-}
-
-div#back a:visited {
-	color: white; background-color: #333;
-}
-
-div#back a:hover {
-	color: black; background-color: white;
-}
-
-div#back a:active {
-	color: white; background-color: gray;
-}
-div#header {
-	display: block;
-	float:left;
+	display:block;
 	width:100%;
+	top:50%;
+	left:50%;
 }
 div#logo {
 	display:inline;
 	float:left;
-	color: black;
-	background-color: red;
-	font-family: 'Tahoma', sans-serif;
-	font-size: 2em; 
-	width: 20%;
-	height:100%;
-	letter-spacing:0.4em; 
-	word-spacing:0.4em;
-	padding-top: 1em;
-	padding-bottom: 1em;
-	padding-left: 1em;
+	font-size: 100%; 
+	width: 100px;
+	height: 100px;
 	font-weight: bold;
+	text-align: center;
+	background-color: #444;
+	border: 5px;
+	border-color: black;
+
+}
+div#logo a:link {
+	color: white; background-color: #333;
+}
+
+div#logo a:visited {
+	color: white; background-color: #333;
+}
+
+div#logo a:hover {
+	color: black; background-color: white;
+}
+
+div#logo a:active {
+	color: white; background-color: gray;
+}
+
+/*HEADER inculdes navigation*/
+
+div#header {
+	display:block;
+	float:left;
+	position:fixed;
+	width:98.8%;
+	height:100px;
+	background-color: #385a8f;
 }
 
 /* NAVIGATION */
 
 div#navigation {
-	display:inline;
-	height:100%;
-	font-size: 100%;
+	display:inline-block;
 	float: right;
-	padding: 0;
-	vertical-align: middle;
-	background-color: blue;
+	width:80%;
+	min-width: 80%;
+	height:80px;
+	font-size: 100%;
+	padding-top: 20px;
+
 }
 
-div#navigation li {
-	list-style: none;
-	margin: 0.5em; 
-	margin-right: 3em; 
-	padding-left: 8.5em;
+div#navigation span {
+	display:inline;
+	margin-top: 100px;
+	margin-right:1%;
+
+	width: 10%;
+	min-width: 8%;
 }
 
 div#navigation a {
-	display: block;
-	padding: 0.3em;
+	padding: 1em;
 	font-weight: bold;
 	text-align: right;
 }
@@ -118,12 +100,13 @@ div#navigation a:active {
 /*CONTENT*/
 
 div#content {
-	margin-left: 22em;
-	padding: 0 1em;
-	min-width: 16em; 
+	display: inline;
+	float:right;
+	width: 80%;
+	padding: 10 10 10 10;
+	margin-top: 100px;
 	background-color: #888;
-	/* Mindestbreite (der Ueberschrift) verhindert 
-	Anzeigefehler in modernen Browsern */
+	
 }
 
 div#content h1 {
