--- a/ressources/css/view.css
+++ b/ressources/css/view.css
@@ -3,7 +3,7 @@
 /*CONTENT*/
 
 div#content {
-overflow: scroll;
+	margin-top: 100px;
 	display: block;
 	float:right;
 	width: 100%;
@@ -11,7 +11,7 @@ overflow: scroll;
 	
 }
 div.top {
-		display:block;
+	display:block;
 	height: 10%;
 	text-align: center;
 }
