--- a/ressources/css/gallery.css
+++ b/ressources/css/gallery.css
@@ -37,16 +37,26 @@
 	font-size: 20px;
 
 }
+@media screen and (max-width: 700px) {
 
 div#content {
-	margin-top: 100px;
+	margin-top: 200px;
 	display: block;
 	float:right;
-	width: 70%;
+	width: 100%;
 	padding: 10 10 10 10;
 	background-color: #888;
 }
-
-
+}
+@media screen and (min-width: 701px){
+				div#content {
+	margin-top: 100px;
+	display: block;
+	float:right;
+	width: 100%;
+	padding: 10 10 10 10;
+	background-color: #888;
+}
+			}
 
 
