started profile displaying

--- a/ressources/css/profile.css
+++ b/ressources/css/profile.css
@@ -3,9 +3,9 @@ div#content {
 	display: block;
 	margin-top: 100px;
 	float:right;
-	width: 70%;
+	width: 80%;
 	padding: 10 10 10 10;
-	background-color: #888;
+	background-color: #91B2DB;
 
 	
 }
