--- a/ressources/css/header.css
+++ b/ressources/css/header.css
@@ -1,6 +1,31 @@
 
 @media screen and (max-width: 700px) {
-				/* BODY */
+
+			/* Custom scrollbar for webkit aka chrome & co */
+			::-webkit-scrollbar {
+				width: 24px;
+				height: 24px;
+			}
+			 
+			/* Track */
+			::-webkit-scrollbar-track {
+				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+				-webkit-border-radius: 24px;
+				border-radius: 24px;
+			}
+			 
+			/* Handle */
+			::-webkit-scrollbar-thumb {
+				-webkit-border-radius: 24px;
+				border-radius: 24px;
+				background: rgba(220,100,50,0.8); 
+				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+			}
+			::-webkit-scrollbar-thumb:window-inactive {
+				background: rgba(200,50,25,0.4); 
+			}
+
+			/* BODY */
 
 			body {
 				color: black; 
@@ -169,8 +194,33 @@
 
 
 
-@media screen and (min-width: 701px){
-				/* BODY */
+@media screen and (min-width: 701px) {
+
+			/* Custom scrollbar for webkit aka chrome & co */
+			::-webkit-scrollbar {
+				width: 24px;
+				height: 24px;
+			}
+			 
+			/* Track */
+			::-webkit-scrollbar-track {
+				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+				-webkit-border-radius: 24px;
+				border-radius: 24px;
+			}
+			 
+			/* Handle */
+			::-webkit-scrollbar-thumb {
+				-webkit-border-radius: 24px;
+				border-radius: 24px;
+				background: rgba(220,100,50,0.8); 
+				-webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.5); 
+			}
+			::-webkit-scrollbar-thumb:window-inactive {
+				background: rgba(200,50,25,0.4); 
+			}
+
+			/* BODY */
 
 			body {
 				color: black; 
