--- a/ressources/css/profile.css
+++ b/ressources/css/profile.css
@@ -10,13 +10,14 @@ div#content {
 	
 }
 
+
 .profitem{
 	
 	margin-left:10px;
 	margin-top:10px;
 	background:white;
-	width: 180px;
-	height:150px;
+	width: 250px;
+	height:200px;
 	overflow: auto;
 	float: left;
 	
@@ -24,15 +25,17 @@ div#content {
 
 .horizontalbar{
 
+	padding-top: 1em;
+	background-color: #2D508D;
 	width: 100%;
-	height: 150px;
+	height: 250px;
 	overflow-x: scroll;
     overflow-y: hidden;
 }
 
 .holder{
 
-	width: 300%;
-	height: 400px;
+	width: 2650px;
+	height: 100%;
 }
 
