--- a/ressources/css/wall.css
+++ b/ressources/css/wall.css
@@ -6,8 +6,9 @@ div#content {
 	display: block;
 	float:right;
 	width: 100%;
-	overflow : auto;
-	padding: 20 20 20 20;
+	overflow : hidden;
+	padding:20 20 20 20;
+	margin-top: 100px;
 	background-color: #ffffff;
 	
 }
@@ -30,5 +31,14 @@ div#content {
     height: 154px;
 }
 
+#map {
+	margin-top: 100px;
+	width: 100%;
+}
+.smallmap {
+
+    width: 100%;
+    height: 500px;
+    border: 1px solid #ccc;
 
 
