--- a/ressources/css/header.css
+++ b/ressources/css/header.css
@@ -51,6 +51,7 @@
 				width:100%;
 				height:100px;
 				background-color: #385a8f;
+				box-shadow: 0px 1px 15px #111;
 			}
 
 			div#logo {
@@ -246,6 +247,7 @@
 				width:100%;
 				height:100px;
 				background-color: #385a8f;
+				box-shadow: 0px 1px 15px #111;
 			}
 
 			div#logo {
