--- a/ressources/css/view.css
+++ b/ressources/css/view.css
@@ -38,30 +38,43 @@ div#content {
 }
 */
 .table {
-    display: table;
+	display: table;
 
-    width: 100%;
+	width: 100%;
 }
 
 .row {
 	width:100%;
 	height:100px;
-    display: table-row;
-    text-align: center;
+	display: table-row;
+	text-align: center;
 
 }
-#picture {
-	background: url("ressources/img/view_template.gif");
-	width:800px;
-	height:533px;
+
+.image {
+	width:2%;
+	display: table-cell;
+	/*border: 1px solid black;*/
+	text-align: center;
+	vertical-align: top;
+	width:800px; height:500px;
+	background-size: 100% 100%;
 }
 
 .cell {
-	width:2%;
-    display: table-cell;
-    /*border: 1px solid black;*/
-    text-align: center;
-    vertical-align: middle;
+	width:auto;
+	display: table-cell;
+	/*border: 1px solid black;*/
+	text-align: center;
+	vertical-align: middle;
+}
+
+div#from{
+	background-color: transparent;
+	margin: 10px;
+	box-shadow: 0px 1px 6px #444;
+	vertical-align: top;
+	/*box-shadow: 5px;*/
 }
 
 
