added friend adding and tables; new button in user profile for that; changed menu layout position and color; get friends scribbles added, not working properly;

--- a/ressources/css/header.css
+++ b/ressources/css/header.css
@@ -49,7 +49,7 @@
 				position:fixed;
 				float:left;
 				width:100%;
-				height:100px;
+				height:80px;
 				background-color: #385a8f;
 				box-shadow: 0px 1px 15px #111;
 			}
@@ -57,9 +57,9 @@
 			div#logo {
 				display:inline;
 				float:left;
-				font-size: 100%; 
-				width: 100px;
-				height: 100px;
+				font-size: 70px; 
+				width: 80px;
+				height: 80px;
 				font-weight: bold;
 				text-align: center;
 				background-color: #444;
@@ -67,6 +67,7 @@
 				border-color: black;
 
 			}
+
 			div#logo a:link {
 				color: white; background-color: #333;
 			}
@@ -123,12 +124,13 @@
 
 			ul.topnav {
 				list-style: none;
+				display: inline;
 				padding: 0 0;	
 				/*margin-left: 40%;*/
 				float: right;
-				width: 70%;
+				width: 35%;
 				/*background: #222;*/
-				font-size: 120%;
+				font-size: 1.5em;
 
 				/*background: url(topnav_bg.gif) repeat-x;*/
 			}
@@ -142,7 +144,7 @@
 				padding: 20px 0px;
 				height: 100%;
 				color: #fff;
-				display: block;
+				display: inline;
 				text-decoration: none;
 				float: right;
 			}
@@ -163,32 +165,34 @@
 			ul.topnav li ul.subnav {
 				list-style: none;
 				position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
-				right: 0; top: 45px;
+				right: 0; top: 55px;
 					font-size: 100%;
-				background: #333;
+				background: #385a8f;
 				margin: 0; padding: 0;
-				font-size: 80%;
+				font-size: 0.8em;
 				display: none;
 				float: right;
-				width: 120px;
-				border: 1px solid #111;
+				width: 150px;
+				/*border: 1px solid #111;*/
+				box-shadow: 0px 1px 15px #111;
 			}
 			ul.topnav li ul.subnav li{
 				margin: 0; padding: 0;
 				border-top: 1px solid #252525; /*--Create bevel effect--*/
 				border-bottom: 1px solid #444; /*--Create bevel effect--*/
 				clear: both;
-				width: 120px;
+				width: 150px;
 			}
 
 			html ul.topnav li ul.subnav li a {
 				float: left;
-				width: 95px;
+				width: 195px;
 				/*background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;*/
 				padding-left: 20px;
 			}
 			html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
-				background: #222;
+				background: #6A80A2;
+				color: #eee;
 			}
 }
 
@@ -245,7 +249,7 @@
 				position:fixed;
 				float:left;
 				width:100%;
-				height:100px;
+				height:80px;
 				background-color: #385a8f;
 				box-shadow: 0px 1px 15px #111;
 			}
@@ -253,9 +257,9 @@
 			div#logo {
 				display:inline;
 				float:left;
-				font-size: 100%; 
-				width: 100px;
-				height: 100px;
+				font-size: 70px; 
+				width: 80px;
+				height: 80px;
 				font-weight: bold;
 				text-align: center;
 				background-color: #444;
@@ -263,6 +267,7 @@
 				border-color: black;
 
 			}
+			
 			div#logo a:link {
 				color: white; background-color: #333;
 			}
@@ -324,7 +329,7 @@
 				float: right;
 				width: 35%;
 				/*background: #222;*/
-				font-size: 120%;
+				font-size: 1.5em;
 
 				/*background: url(topnav_bg.gif) repeat-x;*/
 			}
@@ -359,32 +364,34 @@
 			ul.topnav li ul.subnav {
 				list-style: none;
 				position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
-				right: 0; top: 45px;
+				right: 0; top: 55px;
 					font-size: 100%;
-				background: #333;
+				background: #385a8f;
 				margin: 0; padding: 0;
-				font-size: 80%;
+				font-size: 0.8em;
 				display: none;
 				float: right;
-				width: 120px;
-				border: 1px solid #111;
+				width: 150px;
+				/*border: 1px solid #111;*/
+				box-shadow: 0px 1px 15px #111;
 			}
 			ul.topnav li ul.subnav li{
 				margin: 0; padding: 0;
 				border-top: 1px solid #252525; /*--Create bevel effect--*/
 				border-bottom: 1px solid #444; /*--Create bevel effect--*/
 				clear: both;
-				width: 120px;
+				width: 150px;
 			}
 
 			html ul.topnav li ul.subnav li a {
 				float: left;
-				width: 95px;
+				width: 195px;
 				/*background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;*/
 				padding-left: 20px;
 			}
 			html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
-				background: #222;
+				background: #6A80A2;
+				color: #eee;
 			}
 }
 
