--- a/ressources/css/profile.css
+++ b/ressources/css/profile.css
@@ -42,3 +42,22 @@ div#content {
 	height: 100%;
 }
 
+div#removeFriend {
+	width: 120px; height: auto;
+	background-color: #E52000;
+	text-align: center;
+	font-weight: bold;
+	padding: 1em;
+	vertical-align: middle;
+	box-shadow: 0px 1px 6px #222;
+}
+
+div#addFriend {
+	width: 120px; height: auto;
+	background-color: #7DD300;
+	text-align: center;
+	font-weight: bold;
+	padding: 1em;
+	vertical-align: middle;
+	box-shadow: 0px 1px 6px #222;
+}
