--- a/ressources/css/profile.css
+++ b/ressources/css/profile.css
@@ -61,3 +61,44 @@ div#addFriend {
 	vertical-align: middle;
 	box-shadow: 0px 1px 6px #222;
 }
+
+.initem{
+	background: transparent;
+	color:transparent;
+	margin-top:145px;
+	width: 235px;
+	height: 40px;/*
+	word-spacing: 30px;*/
+	font-size: 1.2em;
+	padding: 5px;
+}
+
+.initem a:link{
+	text-decoration: none;
+	color:#385a8f;
+}
+
+.initem a:visited{
+
+	color:#385a8f;
+}
+
+.initem:hover a:visited {
+	font-weight: bold; 
+	color:white;
+}
+
+.initem a:hover{
+	font-weight: bold; 
+	color:white;
+}
+
+.initem:hover{
+	width: 235px;
+	height: 40px;
+	background-color: #385a8f;
+	color: white;
+	word-spacing: 30px;
+	font-size: 1.2em;
+
+}
