--- a/ressources/css/scribble.css
+++ b/ressources/css/scribble.css
@@ -118,8 +118,8 @@ div#show {
 }
 
 canvas#canvas {
-	width: 960;
-	height: 640;
+	width: 960px;
+	height: 640px;
 	border: 1px solid;
 	border-color: #333;
 	background-color: #fff;
