--- a/ressources/css/gallery.css
+++ b/ressources/css/gallery.css
@@ -3,15 +3,16 @@
 	margin-left:10px;
 	margin-top:10px;
 	background:white;
-	width: 250px;
-	height:200px;
+	width: 300px;
+	height: 200px;
+	box-shadow: 0px 0px 10px #333;
 }
 
 .initem{
 	background: transparent;
 	color:transparent;
-	margin-top:145px;
-	width: 240px;
+	margin-top:135px;
+	width: 290px;
 	height: 50px;/*
 	word-spacing: 30px;*/
 	font-size: 1.2em;
@@ -29,7 +30,17 @@
 }
 
 .initem:hover a:visited {
-	font-weight: bold; 
+	font-weight: lighter; 
+	color:white;
+}
+
+.initem:hover a:link {
+	font-weight: lighter; 
+	color:white;
+}
+
+.initem:hover a:hover {
+	font-weight: bolder; 
 	color:white;
 }
 
@@ -39,23 +50,24 @@
 }
 
 .initem:hover{
-	width: 240px;
+	width: 290px;
 	height:50px;
 	background-color: #385a8f;
 	color: white;
 	word-spacing: 30px;
 	font-size: 1.2em;
-
+	opacity: 0.7;
 }
 
 div#content {
 	margin-top: 100px;
 	display: block;
-	float:right;
-	width: 80%;
-	padding: 10 10 10 10;
-	background-color: #91B2DB;
-	box-shadow: 0px 1px 10px #333;
+	float:left;
+	width: 70%;
+	margin-right: 15%;
+	margin-left: 15%;
+	/*padding: 10 10 10 10;*/
+	background-color: transparent;
 }
 
 
