--- a/ressources/css/view.css
+++ b/ressources/css/view.css
@@ -5,9 +5,11 @@
 div#content {
 	display: block;
 	float:right;
-	width: 100%;
+	width: 98%;
 	margin-top: 100px;
 	background-color: #ffffff;
+	margin-left: 1%;
+	margin-right: 1%;
 	
 }
 /*#top {
@@ -77,45 +79,103 @@ div#from{
 	/*box-shadow: 5px;*/
 }
 
-canvas#canvas {
-	width: 500px;
-	height: 300px;
-	border: 1px solid;
-	border-color: #333;
-	background-color: #fff;
-}
-
 div#showcomments {
-	height: 40px;
-	width: 100%;
+	width: 60%;
 	text-align: center;
+	margin-top: 1em;
+	margin-left: 20%;
+	margin-right: 20%;
+	padding: 0.5em;
 	background-color: #FFFAA0;
 }
 
+a:link {
+	text-decoration: none;
+	color: #224189;
+}
+
+a:visited {
+	text-decoration: none;
+	color: #224189;
+}
+
+a:hover {
+	text-decoration: overline;
+	color: #FF7529;
+}
+
 div#comments {
+	width: 100%;
+	background-color: #FFFAA0;
+}
+
+canvas#canvas {
+	width: 150px;
+	height: 150px;
+	box-shadow: 0px 0px 9px #444;
+/*	border: 1px solid;
+	border-color: #333;*/
+	background-color: #fff;
+	position: relative;
+	top: 75px;
+	left: 60px;
+}
+
+div#canvasholder {
 	float: left;
-	margin-top: 2em;
-	text-align: center;
-	margin-left: 31%;
+	width: 100%;
 }
 
 div#submitcomment {
-	width: 30%;
-	padding: 6px;
+	padding: 0.5em;
 	background-color: #5BFF85;
 	text-align: center;
 	float: left;
-	margin-left: 35%;
-	margin-right: 35%;
+	margin-top: 1em;
 	margin-bottom: 1em;
+	-webkit-transform: rotate(90deg); 
+	-moz-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
+	transform: rotate(90deg);
+	position: relative; top: 15px; left: 45px;
+	box-shadow: 0px -3px 6px #444;
+}
+
+div#clear {
+	padding: 0.5em;
+	background-color: #FF5050;
+	text-align: center;
+	float: left;
+	margin-top: 1em;
+	margin-bottom: 1em;
+	-webkit-transform: rotate(90deg); 
+	-moz-transform: rotate(90deg);
+	-o-transform: rotate(90deg);
+	transform: rotate(90deg);
+	position: relative; top: 95px; left:-15px;
+	box-shadow: 0px -3px 6px #444;
 }
 
 div#makecomment {
+	position: relative; top: -90px; left: 150px;
 
 }
 
 div#commentlist {
+	position: relative; top: -90px; left: 140px;
+	background-color: #2D508D;
+	width: auto;
+	margin-left: 1em;
+	overflow-x: scroll;
+	overflow-y: hidden;
+	text-align: left;
 
+	box-shadow: 0px 0px 9px #444;
+}
+
+div#commentholder{
+	
+	height: 170px;
 }
 
 div#usercomment {
@@ -125,17 +185,20 @@ div#usercomment {
 .item{
 	float:left;
 	margin-left:10px;
-	margin-top:10px;
+	margin-top: -10px;
+	margin-bottom: 10px;
 	background:white;
-	width: 500px;
-	height:300px;
+	width: 150px;
+	height: 150px;
+	padding: 5px;
 }
 
 .initem{
 	background: transparent;
 	color:transparent;
-	margin-top: 245px;
-	width: 500px;
+	margin-top: 90px;
+	margin-left: -5px;
+	width: 150px;
 	height: 50px;
 	font-size: 1.2em;
 	padding: 5px;
@@ -152,7 +215,17 @@ div#usercomment {
 }
 
 .initem:hover a:visited {
-	font-weight: bold; 
+	font-weight: lighter; 
+	color:white;
+}
+
+.initem:hover a:link {
+	font-weight: lighter; 
+	color:white;
+}
+
+.initem:hover a:hover {
+	font-weight: bolder; 
 	color:white;
 }
 
@@ -162,9 +235,10 @@ div#usercomment {
 }
 
 .initem:hover{
-	width: 500px;
+	width: 150px;
 	height:50px;
 	background-color: #385a8f;
+	opacity: 0.7;
 	color: white;
 	word-spacing: 30px;
 	font-size: 1.2em;
