--- a/ressources/css/wall.css
+++ b/ressources/css/wall.css
@@ -1,29 +1,39 @@
 body {
-			overflow : hidden;
+
 }
 
 
 @media screen and (max-width: 700px) {
 
-div#content {
+/*div#canvas {
 	display: block;
 	float:right;
-	width: 100%;
-	overflow : hidden;
+	width:1475px; 
+	height:403; 
 	padding:20 20 20 20;
 	margin-top: 200px;
 	background-color: #ffffff;
 	
+}*/
+.item{
+	display: inline-block;
+	float:left;
+	margin-left:0px;
+	margin-top:0px;
+	background:white;
+	width: 250px;
+	height:200px;
 }
-#map {
-	margin-top: 200px;
-	width: 100%;
-}
-.smallmap {
 
-    width: 100%;
-    height: 500px;
-    border: 1px solid #ccc;
+.initem{
+	background: transparent;
+	color:transparent;
+	margin-top:145px;
+	width: 240px;
+	height: 50px;/*
+	word-spacing: 30px;*/
+	font-size: 1.2em;
+	padding: 5px;
 }
 }
 
@@ -32,20 +42,20 @@ div#content {
 
 /*CONTENT*/
 
-div#content {
+/*div#canvas {
 	display: block;
 	float:right;
-	width: 100%;
-		overflow : hidden;
+	width:1475; 
+	height:503; 
 	padding:20 20 20 20;
 	margin-top: 100px;
 	background-color: #ffffff;
 	
-}
+}*/
 
 .table {
     display: table;
-
+    border: 1px;
     width: 100%;
 }
 
@@ -57,16 +67,33 @@ div#content {
 .cell {
     display: table-cell;
     /*border: 1px solid black;*/
-    width: 204px;
-    height: 154px;
+    width: 20%;
+    height: 150px;
 }
 
-#map {
-	width: 100%;
+.item{
+	float:left;
+	display: inline-block;
+	margin-left:0px;
+	margin-top:0px;
+	background:white;
+	width: 250px;
+	height:200px;
 }
-.smallmap {
-    width: 100%;
-    height: 500px;
-    border: 1px solid #ccc;
+
+.initem{
+	background: transparent;
+	color:transparent;
+	margin-top:145px;
+	width: 240px;
+	height: 50px;/*
+	word-spacing: 30px;*/
+	font-size: 1.2em;
+	padding: 5px;
 }
+#clippingMask {
+	width:100%;
+	height:100%;
+}
+
 }
