--- a/ressources/css/view.css
+++ b/ressources/css/view.css
@@ -7,7 +7,7 @@ div#content {
 	float:right;
 	width: 98%;
 	margin-top: 100px;
-	background-color: #ffffff;
+	background-color: transparent;
 	margin-left: 1%;
 	margin-right: 1%;
 	
@@ -53,11 +53,13 @@ div#content {
 
 }
 
+
 .image {
 	width:2%;
 	display: table-cell;
 	/*border: 1px solid black;*/
 	text-align: center;
+	background-color: white;
 	vertical-align: top;
 	width:800px; height:500px;
 	background-size: 100% 100%;
@@ -72,7 +74,7 @@ div#content {
 }
 
 div#from{
-	background-color: transparent;
+	background-color: white;
 	margin: 10px;
 	box-shadow: 0px 1px 6px #444;
 	vertical-align: top;
@@ -83,11 +85,10 @@ div#showcomments {
 	width: 60%;
 	text-align: center;
 
-	margin-top: -5px;
+	margin-top: 0px;
 	margin-left: 20%;
 	margin-right: 20%;
 	margin-bottom: 5px;
-	background-color: white;
 }
 
 a:link {
@@ -107,7 +108,6 @@ a:hover {
 
 div#comments {
 	width: 100%;
-	background-color: white;
 }
 
 canvas#canvas {
@@ -116,7 +116,7 @@ canvas#canvas {
 	box-shadow: 0px 0px 9px #444;
 /*	border: 1px solid;
 	border-color: #333;*/
-	background-color: #fff;
+	background-color: white;
 	position: relative;
 	top: 75px;
 	left: 60px;
@@ -125,6 +125,11 @@ canvas#canvas {
 div#canvasholder {
 	float: left;
 	width: 100%;
+}
+
+hr#bar {
+	background-color: transparent;
+	box-shadow: 0px 0px 5px #114;
 }
 
 div#submitcomment {
