--- a/ressources/css/view.css
+++ b/ressources/css/view.css
@@ -47,12 +47,40 @@ div#content {
 
 .row {
 	width:100%;
-	height:100px;
 	display: table-row;
 	text-align: center;
 
 }
 
+.paint {
+	padding: 5px;
+	background-color: #7600C9;
+}
+
+.topneightbour {
+	width: 100%;
+	height: 100px;
+	background-position: bottom;
+	background-size: 100% 500%;
+}
+.rightneightbour {
+	width: 100px;
+	height: 100%;
+	background-position: left;
+	background-size: 500% 100%;
+}
+.bottomneightbour {
+	width: 100%;
+	height: 100px;
+	background-position: top;
+	background-size: 100% 500%;
+}
+.leftneightbour {
+	width: 100px;
+	height: 100%;
+	background-position: right;
+	background-size: 100% 500%;
+}
 
 .image {
 	width:2%;
