--- a/ressources/css/view.css
+++ b/ressources/css/view.css
@@ -4,7 +4,7 @@
 
 div#content {
 	display: block;
-	float:right;
+	float:left;
 	width: 98%;
 	margin-top: 100px;
 	background-color: transparent;
@@ -41,45 +41,46 @@ div#content {
 */
 .table {
 	display: table;
-
-	width: 100%;
+	margin-left: 5%;
+	margin-right: 5%;
+	width: 90%;
 }
 
 .row {
-	width:100%;
 	display: table-row;
-	text-align: center;
-
+	vertical-align: middle;
 }
 
 .paint {
 	padding: 5px;
 	background-color: #7600C9;
+	margin: 1%;
+	text-align: center;
 }
 
-.topneightbour {
-	width: 100%;
+#topneightbour {  
+	width: 960px;
 	height: 100px;
 	background-position: bottom;
 	background-size: 100% 500%;
 }
-.rightneightbour {
-	width: 100px;
-	height: 100%;
+#rightneightbour {
+	width: 110px;
+	height: 640px;
 	background-position: left;
-	background-size: 500% 100%;
+	background-size: 900% 100%;
 }
-.bottomneightbour {
-	width: 100%;
+#bottomneightbour {
+	width: 960px;
 	height: 100px;
 	background-position: top;
 	background-size: 100% 500%;
 }
-.leftneightbour {
-	width: 100px;
-	height: 100%;
+#leftneightbour {
+	width: 110px;
+	height: 640px;
 	background-position: right;
-	background-size: 100% 500%;
+	background-size: 900% 100%;
 }
 
 .image {
@@ -94,17 +95,17 @@ div#content {
 }
 
 .cell {
-	width:auto;
 	display: table-cell;
-	/*border: 1px solid black;*/
-	text-align: center;
 	vertical-align: middle;
+	/*border: 1px solid black;*/
+	background-color: white;
+	box-shadow: 0px 0px 10px #111;
 }
 
 div#from{
 	background-color: white;
 	margin: 10px;
-	box-shadow: 0px 1px 6px #444;
+	box-shadow: 0px 0px 10px #111;
 	vertical-align: top;
 	/*box-shadow: 5px;*/
 }
@@ -141,7 +142,7 @@ div#comments {
 canvas#canvas {
 	width: 150px;
 	height: 150px;
-	box-shadow: 0px 0px 9px #444;
+	/*box-shadow: 0px 0px 9px #444;*/
 /*	border: 1px solid;
 	border-color: #333;*/
 	background-color: white;
@@ -157,7 +158,8 @@ div#canvasholder {
 
 hr#bar {
 	background-color: transparent;
-	box-shadow: 0px 0px 5px #114;
+	box-shadow: 0px 0px 5px #006;
+
 }
 
 div#submitcomment {
