--- a/ressources/css/gallery.css
+++ b/ressources/css/gallery.css
@@ -59,6 +59,38 @@
 	opacity: 0.7;
 }
 
+div#profilenav {
+	width : 101%;
+	padding: 2px;
+	height: 20px;
+	margin-top: -8px;
+	margin-bottom: 5px;
+	background-color: #385a8f;
+	color: white;
+	display: block;
+	position:fixed;
+	vertical-align: middle;
+	box-shadow: 0px 0px 10px #111;
+}
+
+div#profilenav a:visited {
+	text-decoration: none;
+	color: white;
+	font-weight: lighter;
+}
+
+div#profilenav a:link {
+	text-decoration: none;
+	color: white;
+	font-weight: lighter;
+}
+
+div#profilenav a:hover {
+	text-decoration: none;
+	color: white;
+	font-weight: bold;
+}
+
 div#content {
 	margin-top: 100px;
 	display: block;
