--- a/ressources/css/header.css
+++ b/ressources/css/header.css
@@ -35,6 +35,7 @@
 				left:0%;
 			}
 			div#site {
+				margin-left: -8px;
 				display:block;
 				width:100%;
 				top:50%;
@@ -235,6 +236,7 @@
 				left:0%;
 			}
 			div#site {
+				margin-left: -8px;
 				display:block;
 				width:100%;
 				top:50%;
