--- a/ressources/css/headerSearch.css
+++ b/ressources/css/headerSearch.css
@@ -35,6 +35,7 @@
 				left:0%;
 			}
 			div#site {
+				margin-left: -8px;
 				display:block;
 				width:100%;
 				top:50%;
@@ -235,6 +236,7 @@
 				left:0%;
 			}
 			div#site {
+				margin-left: -8px;
 				display:block;
 				width:100%;
 				top:50%;
@@ -248,18 +250,20 @@
 				display:block;
 				position:fixed;
 				float:left;
+				margin-top: 16px;
 				width:100%;
-				height:80px;
+				height:50px;
+				color: white;
 				background-color: #385a8f;
-				box-shadow: 0px 1px 15px #111;
+				box-shadow: 0px 0px 20px #111;
 			}
 
 			div#logo {
 				display:inline;
 				float:left;
-				font-size: 70px; 
+				font-size: 45px; 
 				width: 80px;
-				height: 80px;
+				height: 50px;
 				font-weight: bold;
 				text-align: center;
 				background-color: #444;
@@ -293,92 +297,71 @@
 				color: #fff;
 				/*background: #4e80cc;*/
 			}
-			div.searchbar ul {
-				list-style:none;
-			}
-			div.searchbar ul li{
-			 position: relative;
+			div.searchbar div{
+				top: 2px; left: 10px;
+			 	position: relative;
 				display:inline;
 				height: auto;
 			}
-			div.searchbar ul li input.searchtext {
+
+			div.searchbar input.searchtext {
 				width: 330px;
 				height:60%;
 			}
 			/* NAVIGATION */
 
 			div#navigation {
-				display:inline;
 				float: right;
 				width:30%;
-				height:80px;
-				font-size: 100%;
+				height:50px;
 
 			}
 
 			/*DROPDOWN MENU*/
 
-			ul.topnav {
-				list-style: none;
-				display: inline;
-				padding: 0 0;	
+			.topnav {
 				/*margin-left: 40%;*/
 				float: right;
-				width: 35%;
 				/*background: #222;*/
-				font-size: 1.5em;
 
 				/*background: url(topnav_bg.gif) repeat-x;*/
 			}
-			ul.topnav li {
-				width: 30%;
+
+			.topnav div {
 				float: right;
-				padding: 0 5px 0 0;
-				position: relative; --Declare X and Y axis base for sub navigation--*/
+				padding-right: 5px;
+				/*position: relative; --Declare X and Y axis base for sub navigation--*/
 			}
-			ul.topnav li a{
-				padding: 20px 0px;
-				height: 100%;
+
+			div.spacerdiv {
+				width: 20px;
+			}
+			.main {
+				margin-right: 15px;
+				font-size: 30px;
+				height: 32px;
+				/*width: 32px;*/
+				margin-top: 8px;
+				margin-bottom: 8px;
+			}
+			.social {
+				margin-right: 15px;
+				font-size: 16px;
+				height: 16px;
+				/*width: 16px;*/
+				margin-top: 17px;
+				margin-bottom: 17px;
+			}
+
+			.topnav a {
 				color: #fff;
-				display: inline;
 				text-decoration: none;
-				float: right;
 			}
-			ul.topnav li a:hover{
+			.topnav a:hover {
 				color:#bbb;
 			/*	border-top: 1px solid #252525; /*--Create bevel effect--*/
 			}
-			ul.topnav li span { /*--Drop down trigger styles--*/
-				height: 100%;
-				float: left;
-				/*background: url(subnav_btn.gif) no-repeat center top;*/
-			}
-			ul.topnav li span.subhover {
-				background-position: center bottom; 
-				cursor: pointer;
 
-				} /*--Hover effect for trigger--*/
-			ul.topnav li ul.subnav {
-				list-style: none;
-				position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
-				right: 0; top: 55px;
-					font-size: 100%;
-				background: #385a8f;
-				margin: 0; padding: 0;
-				font-size: 0.8em;
-				display: none;
-				float: right;
-				width: 150px;
-				/*border: 1px solid #111;*/
-				box-shadow: 0px 1px 15px #111;
-			}
-			ul.topnav li ul.subnav li{
-				margin: 0; padding: 0;
-				border-top: 1px solid #252525; /*--Create bevel effect--*/
-				border-bottom: 1px solid #444; /*--Create bevel effect--*/
-				clear: both;
-				width: 150px;
-			}
 
 			html ul.topnav li ul.subnav li a {
 				float: left;
