--- a/ressources/css/headerSearch.css
+++ b/ressources/css/headerSearch.css
@@ -42,33 +42,31 @@
 		left:50%;
 	}
 
-
 	/*HEADER inculdes navigation*/
 
 	div#header {
 		display:block;
 		position:fixed;
 		float:left;
+		margin-top: -8px;
 		width:100%;
-		height:80px;
+		height:40px;
+		color: white;
 		background-color: #385a8f;
-		box-shadow: 0px 1px 15px #111;
+		box-shadow: 0px 0px 20px #111;
 	}
 
 	div#logo {
+		opacity: 0;
 		display:inline;
 		float:left;
-		font-size: 70px; 
-		width: 80px;
-		height: 80px;
+		width: 0px;
+		height: 00px;
 		font-weight: bold;
 		text-align: center;
 		background-color: #444;
-		border: 5px;
-		border-color: black;
 
 	}
-	
 	div#logo a:link {
 		color: white; text-decoration: none;
 	}
@@ -85,115 +83,107 @@
 		color: white; font-weight: bolder; text-decoration: none;
 	}
 
-
 	/*Searchbar*/
+
 	div.searchbar {
-		display: block;
-		float:inherit;
-		font-size: 80%;
-		width:100%;
-		min-width: 100%;
+
+		display: inline-block;
+		float:left;
+		font-size: smaller;
+		width: 300px;
 		height: 100%;
 		color: #fff;
 		/*background: #4e80cc;*/
 	}
-	div.searchbar ul {
-		list-style:none;
-	}
-	div.searchbar ul li{
+
+	div.searchbar div{
+		top: 2px; left: 0px;
+		position: relative;
 		display:inline;
-		height: 100%;
-	}
-	div.searchbar ul li input.searchtext {
-		width: 90%;
-
-		height:80%;
+		height: auto;
 	}
 
+	div.searchbar input.searchtext {
+		width: 300px;
+		height:16px;
+	}
 	/* NAVIGATION */
 
 	div#navigation {
-		display:block;
-		float: left;
-		width:100%;
-		height:80px;
-		font-size: 100%;
+		float: right;
+		width:30%;
+		height:50px;
 
 	}
 
-	/*DROPDOWN MENU*/
+	/* MENU*/
 
-	ul.topnav {
-		list-style: none;
-		display: inline;
-		padding: 0 0;	
+	.topnav {
 		/*margin-left: 40%;*/
-		float: right;
-		width: 35%;
+		/*float: right;
+		width: 250px;*/
 		/*background: #222;*/
-		font-size: 1.5em;
+		/*margin-left: 15px;*/
 
 		/*background: url(topnav_bg.gif) repeat-x;*/
 	}
-	ul.topnav li {
-		width: 30%;
-		float: right;
-		padding: 0 5px 0 0;
-		position: relative; --Declare X and Y axis base for sub navigation--*/
+
+	.topnav div {
+		padding-right: 5px;
+		/*position: relative; --Declare X and Y axis base for sub navigation--*/
 	}
-	ul.topnav li a{
-		padding: 20px 0px;
-		height: 100%;
+
+	.main {
+		float: left;
+		margin-left: 15px;
+	}
+	.social {
+		float: right;
+	}
+
+	.topnav a {
 		color: #fff;
-		display: inline;
 		text-decoration: none;
-		float: right;
 	}
-	ul.topnav li a:hover{
+	.topnav a:hover {
 		color:#bbb;
 	/*	border-top: 1px solid #252525; /*--Create bevel effect--*/
 	}
-	ul.topnav li span { /*--Drop down trigger styles--*/
-		height: 100%;
-		float: left;
-		/*background: url(subnav_btn.gif) no-repeat center top;*/
-	}
-	ul.topnav li span.subhover {
-		background-position: center bottom; 
-		cursor: pointer;
 
-		} /*--Hover effect for trigger--*/
-	ul.topnav li ul.subnav {
-		list-style: none;
-		position: absolute; /*--Important - Keeps subnav from affecting main navigation flow--*/
-		right: 0; top: 55px;
-			font-size: 100%;
-		background: #385a8f;
-		margin: 0; padding: 0;
-		font-size: 0.8em;
-		display: none;
+	div#profilenav {
 		float: right;
-		width: 150px;
-		/*border: 1px solid #111;*/
-		box-shadow: 0px 1px 15px #111;
-	}
-	ul.topnav li ul.subnav li{
-		margin: 0; padding: 0;
-		border-top: 1px solid #252525; /*--Create bevel effect--*/
-		border-bottom: 1px solid #444; /*--Create bevel effect--*/
-		clear: both;
-		width: 150px;
+		height: 20px;
+		width: 100%;
+		background-color: #385a8f;
+		vertical-align: bottom;
 	}
 
-	html ul.topnav li ul.subnav li a {
-		float: left;
-		width: 195px;
-		/*background: #333 url(dropdown_linkbg.gif) no-repeat 10px center;*/
-		padding-left: 20px;
+	div#profileline {
+
+		float: right;
+		font-size: small;
 	}
-	html ul.topnav li ul.subnav li a:hover { /*--Hover effect for subnav links--*/
-		background: #6A80A2;
-		color: #eee;
+
+	div#profileline img {
+		vertical-align: bottom;
+	}
+
+	div#profilenav a:visited {
+		text-decoration: none;
+		color: white;
+		font-weight: lighter;
+	}
+
+	div#profilenav a:link {
+		text-decoration: none;
+		color: white;
+		font-weight: lighter;
+	}
+
+	div#profilenav a:hover {
+		text-decoration: none;
+		color: white;
+		font-weight: bold;
 	}
 }
 
