--- a/ressources/css/header.css
+++ b/ressources/css/header.css
@@ -53,6 +53,7 @@
 				height:80px;
 				background-color: #385a8f;
 				box-shadow: 0px 1px 15px #111;
+						z-index: 2;
 			}
 
 			div#logo {
@@ -254,6 +255,7 @@
 				height:80px;
 				background-color: #385a8f;
 				box-shadow: 0px 1px 15px #111;
+						z-index: 2;
 			}
 
 			div#logo {
