--- a/ressources/css/headerSearch.css
+++ b/ressources/css/headerSearch.css
@@ -54,6 +54,7 @@
 		color: white;
 		background-color: #385a8f;
 		box-shadow: 0px 0px 20px #111;
+				z-index: 2;
 	}
 
 	div#logo {
@@ -223,6 +224,7 @@
 		background-color: #E0E0E0;
 		font-size: 100%;
 		font-family: 'Tahoma', sans-serif; 
+			overflow:scroll;
 	}
 	div#site {
 		margin-left: -8px;
@@ -242,6 +244,7 @@
 		color: white;
 		background-color: #385a8f;
 		box-shadow: 0px 0px 20px #111;
+		z-index: 2;
 	}
 
 	div#logo {
