--- a/ressources/css/wall.css
+++ b/ressources/css/wall.css
@@ -1,7 +1,3 @@
-body {
-
-}
-
 
 @media screen and (max-width: 700px) {
 
@@ -15,25 +11,42 @@ body {
 	background-color: #ffffff;
 	
 }*/
-.item{
-	display: inline-block;
-	float:left;
-	margin-left:0px;
-	margin-top:0px;
-	background:white;
-	width: 250px;
-	height:200px;
+.table {
+    display: table;
+  
+    
+
+
 }
 
-.initem{
-	background: transparent;
-	color:transparent;
-	margin-top:145px;
-	width: 240px;
-	height: 50px;/*
-	word-spacing: 30px;*/
-	font-size: 1.2em;
-	padding: 5px;
+.row {
+
+    display:table-row;
+    	height: 840px;	
+    clear: both;
+
+}
+
+.cell {
+	width:1890px;
+
+    display: table-cell;
+	position: relative;
+    /*border: 1px solid black;*/
+}
+
+
+#clippingMask {
+	width:100;
+	height:100%;
+
+}
+.mapCell {
+	width: 210px;
+	height: 140px;
+	position: absolute;
+
+
 }
 }
 
@@ -53,47 +66,45 @@ body {
 	
 }*/
 
+
+
 .table {
     display: table;
-    border: 1px;
-    width: 100%;
+  
+    
+
+
 }
 
 .row {
-    display: table-row;
+
+    display:table-row;
+    	height: 840px;	
+    clear: both;
 
 }
 
 .cell {
+	width:1890px;
+
     display: table-cell;
+	position: relative;
     /*border: 1px solid black;*/
-    width: 20%;
-    height: 150px;
 }
 
-.item{
-	float:left;
-	display: inline-block;
-	margin-left:0px;
-	margin-top:0px;
-	background:white;
-	width: 250px;
-	height:200px;
-}
 
-.initem{
-	background: transparent;
-	color:transparent;
-	margin-top:145px;
-	width: 240px;
-	height: 50px;/*
-	word-spacing: 30px;*/
-	font-size: 1.2em;
-	padding: 5px;
-}
 #clippingMask {
-	width:100%;
+	width:100;
 	height:100%;
+
+}
+.mapCell {
+	width: 210px;
+	height: 140px;
+	position: absolute;
+	background: #ffffff;
+
+
 }
 
 }
