--- a/ressources/css/profile.css
+++ b/ressources/css/profile.css
@@ -1,13 +1,11 @@
 
 div#content {
 	display: block;
-	margin-top: 100px;
+	margin-top: 70px;
 	float:right;
 	width: 80%;
 	background-color: #91B2DB;
 	box-shadow: 0px 1px 10px #333;
-
-	
 }
 
 .profitem{
@@ -108,4 +106,11 @@ div#addFriend {
 	word-spacing: 30px;
 	font-size: 1.2em;
 	opacity: 0.7;
+}
+
+
+#profile {
+	float: left; 
+	margin-top: 70px;
+	width: 20%;
 }
