--- a/ressources/css/profile.css
+++ b/ressources/css/profile.css
@@ -38,23 +38,34 @@ div#content {
 }
 
 div#removeFriend {
-	width: 120px; height: auto;
+	width: 100px; height: auto;
 	background-color: #E52000;
 	text-align: center;
 	font-weight: bold;
-	padding: 1em;
+	font-size: 0.9em;
+	padding: 0.5em;
 	vertical-align: middle;
-	box-shadow: 0px 1px 6px #222;
+	box-shadow: 0px 0px 6px #222;
+}
+
+div#removeFriend:hover {
+	background-color: #FF5E43;
+	
 }
 
 div#addFriend {
-	width: 120px; height: auto;
+	width: 100px; height: auto;
 	background-color: #7DD300;
 	text-align: center;
 	font-weight: bold;
-	padding: 1em;
+	font-size: 0.9em;
+	padding: 0.5em;
 	vertical-align: middle;
-	box-shadow: 0px 1px 6px #222;
+	box-shadow: 0px 0px 6px #222;
+}
+
+div#addFriend:hover {
+	background-color: #BBFF57;
 }
 
 .initem{
@@ -112,5 +123,26 @@ div#addFriend {
 #profile {
 	float: left; 
 	margin-top: 70px;
-	width: 20%;
+	width: 17%;
+	margin-left: 15px;
+}
+
+#plogin {
+	font-size: 0.8em;
+	font-variant: small-caps;
+}
+
+#pname {
+	font-size: large;
+	font-weight: bold;
+}
+
+#ppublic {
+	font-size: 0.9em;
+	font-variant: small-caps;
+}
+
+#friendssection {
+	font-size: 0.9em;
+	font-variant: small-caps;	
 }
