--- a/ressources/css/friends.css
+++ b/ressources/css/friends.css
@@ -5,6 +5,7 @@
 	background:white;
 	width: 210px;
 	height:140px;
+	box-shadow: 0px 0px 10px #333;
 }
 
 .initem{
@@ -50,12 +51,12 @@
 
 div#content {
 	margin-top: 100px;
+	margin-left: 10%;
 	display: block;
-	float:right;
+	float: left;
 	width: 80%;
 	padding: 10 10 10 10;
-	background-color: #91B2DB;
-	box-shadow: 0px 1px 10px #333;
+	background-color: transparent;
 }
 
 
