added jquery resize for gallery, friends, favs and profile; fixed fav bug; sorting for profile working;

--- a/ressources/css/gallery.css
+++ b/ressources/css/gallery.css
@@ -61,12 +61,11 @@
 }
 
 div#content {
-	margin-top: 100px;
+	margin-top: 60px;
 	display: block;
 	float:left;
-	width: 98% auto;
-	margin-right: 1%;
-	margin-left: 1%;
+	width: 100% auto;
+	margin-left: 10px;
 	/*padding: 10 10 10 10;*/
 	background-color: transparent;
 }
