--- a/ressources/css/profile.css
+++ b/ressources/css/profile.css
@@ -3,9 +3,9 @@ div#content {
 	display: block;
 	margin-top: 70px;
 	float:right;
-	width: 80%;
-	background-color: #91B2DB;
-	box-shadow: 0px 1px 10px #333;
+	width: 500px;
+	background-color: transparent;
+	/*box-shadow: 0px 1px 10px #333;*/
 }
 
 .profitem{
@@ -123,7 +123,7 @@ div#addFriend:hover {
 #profile {
 	float: left; 
 	margin-top: 70px;
-	width: 17%;
+	width: 160px;
 	margin-left: 15px;
 }
 
