--- a/ressources/css/favorites.css
+++ b/ressources/css/favorites.css
@@ -1,18 +1,19 @@
 .item{
+	display: inline-block;
 	float:left;
 	margin-left:10px;
 	margin-top:10px;
 	background:white;
 	width: 300px;
-	height:200px;
+	height: 200px;
 	box-shadow: 0px 0px 10px #333;
 }
 
 .initem{
 	background: transparent;
 	color:transparent;
-	margin-top:75px;
-	width: 300px;
+	margin-top:135px;
+	width: 290px;
 	height: 50px;/*
 	word-spacing: 30px;*/
 	font-size: 1.2em;
@@ -30,7 +31,17 @@
 }
 
 .initem:hover a:visited {
-	font-weight: bold; 
+	font-weight: lighter; 
+	color:white;
+}
+
+.initem:hover a:link {
+	font-weight: lighter; 
+	color:white;
+}
+
+.initem:hover a:hover {
+	font-weight: bolder; 
 	color:white;
 }
 
@@ -40,7 +51,7 @@
 }
 
 .initem:hover{
-	width: 300px;
+	width: 290px;
 	height:50px;
 	background-color: #385a8f;
 	color: white;
