--- a/ressources/css/wall.css
+++ b/ressources/css/wall.css
@@ -276,14 +276,16 @@ canvas#canvas {
 /*	border: 1px solid;
 border-color: #333;*/
 background-color: white;
-position: relative;
-top: 75px;
-left: 60px;
+display:inline-block;
+border-style:solid;
+border-width:5px;
+float:left;
 }
 
 div#canvasholder {
 	float: left;
 	width: 100%;
+	position: relative;
 }
 
 hr#bar {
@@ -293,53 +295,58 @@ hr#bar {
 }
 
 div#submitcomment {
+	display: inline;
 	padding: 0.5em;
 	background-color: #5BFF85;
 	text-align: center;
-	float: left;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	width:50px;
+	float: right;
+	
+
 	-webkit-transform: rotate(90deg); 
 	-moz-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 	transform: rotate(90deg);
-	position: absolute; top: 15px; left: 45px;
+	
 	box-shadow: 0px -3px 6px #444;
 }
 
 div#clear {
+	display: ;
 	padding: 0.5em;
 	background-color: #FF5050;
 	text-align: center;
-	float: left;
-	margin-top: 1em;
-	margin-bottom: 1em;
+	float:right;
+	width:50px;
+	margin-left: 60px;
 	-webkit-transform: rotate(90deg); 
 	-moz-transform: rotate(90deg);
 	-o-transform: rotate(90deg);
 	transform: rotate(90deg);
-	position: absolute; top: 95px; left:-15px;
+	
 	box-shadow: 0px -3px 6px #444;
 }
 
 div#makecomment {
-	position: absolute; top: -90px; left: 150px;
+	display:inline-block;
 
+}
+div#commentBlock {
+	position: absolute; top: 420px; right: 0;
 }
 
 div#commentlist {
-	position: absolute; bottom: -90px; right: 10%;
+	display:inline-block;
 	background-color: #2D508D;
-	width: auto;
+	width: 70%;
 	overflow-x: scroll;
 	overflow-y: hidden;
 	text-align: left;
-
 	box-shadow: 0px 0px 9px #444;
 }
 
 div#commentholder{
-	
+	display:inline-block;
 	height: 170px;
 }
 
