--- a/ressources/css/settings.css
+++ b/ressources/css/settings.css
@@ -5,8 +5,7 @@ div#content {
 	float:right;
 	padding: 10px;
 	width: 80%;
-	background-color: #91B2DB;
-	box-shadow: 0px 0px 10px #333;
+	background-color: transparent;
 }
 
 #profile {
@@ -80,8 +79,9 @@ div#content {
 }
 
 .horizontal {
-	height: 20px;
+	height: 2px;
 	width: 100%;
 	float: left;
-	background-color: #4081FF;
+	background-color: #000;
+	box-shadow: 0px 0px 2px #222;
 }
