--- a/ressources/css/scribble.css
+++ b/ressources/css/scribble.css
@@ -7,6 +7,7 @@ body {
 .visible, .hidden {
   overflow: hidden;
   /* This container should not have padding, borders, etc. */
+  float: left;
 }
 .visible {
 	visibility: visible;
@@ -36,52 +37,7 @@ body {
 	transition: margin-top 0s 0.2s;
 }
 
-div#tools {
-	float: left;
-	width: 8em;
-	padding: 0.5em;
-	padding-top: 2em;
-	background-color: transparent;
 
-}
-
-div#tools li {
-	padding: 5px;
-	margin-bottom: 3px;
-	height: 1.5em;
-	list-style-type: none;
-	background-color: #bbb;
-	border: 1px solid;
-	border-color: #666;
-	
-}
-
-div#tools ul {
-	display: block;
-	
-	list-style-type: disc;
-	-webkit-margin-before: 0em;
-	-webkit-margin-after: 0em;
-	-webkit-margin-start: 0px;
-	-webkit-margin-end: 0px;
-	-webkit-padding-start: 0px;
-
-}
-
-div#tools a:link {
-	color: black; background-color: #444; text-decoration: none;
-}
-
-div#tools a:visited {
-	color: black; background-color: #444; text-decoration: none;
-}
-
-div#tools a:hover {
-	color: white; background-color: #222; text-decoration: none;
-}
-
-div#tools a:active {
-	color: green; background-color: #fff; text-decoration: none;
 }
 
 div#content {
@@ -115,8 +71,6 @@ div#show {
 	width: 7em;
 	padding: 1px;
 	text-align: center;
-	border: 1px solid;
-	border-color: #666;
 	background-color: #6f6;
 	float: left;
 }
@@ -127,8 +81,9 @@ canvas#canvas {
 	border: 1px solid;
 	border-color: #333;
 	background-color: #fff;
-	float: left;
-	
+	position:absolute;
+	left: 250px;
+	top: 80px; 	
 }
 
 #clear{
@@ -136,7 +91,8 @@ canvas#canvas {
 	float: left;
 	width: 120px;
 	height: 20px;
-	background-color:lightgrey;
+	background-color:#708090;
+	color: white;
 }
 
 #clear:hover{
@@ -150,9 +106,11 @@ canvas#canvas {
 #publish{
 	width: 120px;
 	height: 40px;
-	margin-left: 5px;
+	position: absolute;
+	left: 10px;
+	top: 560px;
 	border: none;
-	background-color: lightgrey;
+	background-color: #6f6;
 
 }
 
@@ -164,15 +122,16 @@ canvas#canvas {
 	border-color: white;
 }
 
-#stepback{
+#copy{
 	margin-top: 10px;
 	width: 55px;
 	height: 20px;
-	background-color: lightgrey;
+	background-color: #708090;
 	float: left;
+	color: white;
 }
 
-#stepback:hover{
+#copy:hover{
 	width: 53px;
 	height: 18px;
 	border-style:solid;
@@ -180,15 +139,18 @@ canvas#canvas {
 	border-color: white;
 }
 
-#stepforward{
+#paste{
 	margin-top: 10px;
 	width: 55px;
 	height: 20px;
-	background-color: lightgrey;
-	float: right;
+	background-color: #708090;
+	position: absolute;
+	left: 62px;
+	top:30px;
+	color: white;
 }
 
-#stepforward:hover{
+#paste:hover{
 	width: 53px;
 	height: 18px;
 	border-style:solid;
@@ -196,12 +158,14 @@ canvas#canvas {
 	border-color: white;
 }
 
-#color1{
+#color{
 	
 	width: 120px;
 	height: 80px;
 	background-color: darkgrey;
-	float: left;
+	position: absolute;
+	top: 160px;
+	left: 10px;
 }
 
 #cbox{
@@ -296,83 +260,62 @@ canvas#canvas {
 
 
 #shadow{
-	margin-top: 20px;
-	float: left;
-	margin-right: 5px;
-	width: 120px;
-	height: 20px;
-	background-color: lightgrey;
+	
+	width: 60px;
+	height: 60px;
+	background-color: #708090;
 	text-align: center;
+	position: absolute;
+	left: 0px;
+	top: 0px;
 }
 
-#shadow:hover{
-	width: 118px;
-	height: 18px;
-	border-style:solid;
-	border-width:1px;
-	border-color: white;
-}
 
 #block{
-	margin-top: 20px;
-	float: left;
-	margin-right: 5px;
-	width: 120px;
-	height: 20px;
-	background-color: lightgrey;
+	
+	width: 60px;
+	height: 60px;
+	background-color: #708090;
 	text-align: center;
+	position: absolute;
+	left: 70px;
+	top: 0px;
 }
 
-#block:hover{
-	width: 118px;
-	height: 18px;
-	border-style:solid;
-	border-width:1px;
-	border-color: white;
-}
+
 
 #round{
-	margin-top: 20px;
-	float: left;
-	margin-right: 5px;
-	width: 120px;
-	height: 20px;
-	background-color: lightgrey;
-	text-align: center;
+	
+	width: 60px;
+	height: 60px;
+	background-color: #708090;
+	
+	position: absolute;
+	left: 0px;
+	top: 70px;
 }
 
-#round:hover{
-	width: 118px;
-	height: 18px;
-	border-style:solid;
-	border-width:1px;
-	border-color: white;
-}
+
 
 #split{
-	margin-top: 20px;
-	float: left;
-	margin-right: 5px;
-	width: 120px;
-	height: 20px;
-	background-color: lightgrey;
+	
+	width: 60px;
+	height: 60px;
+	background-color: #708090;
 	text-align: center;
+	position: absolute;
+	left: 70px;
+	top: 70px;
 }
 
-#split:hover{
-	width: 118px;
-	height: 18px;
-	border-style:solid;
-	border-width:1px;
-	border-color: white;
-}
 
 #rubber{
 	margin-top: 10px;
 	float: left;
 	width: 120px;
 	height: 20px;
-	background-color: lightgrey;
+	background-color: #708090;
+	color: white;
 }
 
 
@@ -386,7 +329,9 @@ canvas#canvas {
 
 #bar{
 
-margin-top: 140px;
+position: absolute;
+left: 10px;
+top: 450px;
 font-size: 14px;
 }
 
@@ -412,5 +357,15 @@ font-size: 14px;
 	width: 110px;
 	height: 140px;
 	text-align: center;
+	position: absolute;
+	left: 10px;
+	top: 50px;
 }
 
+#brushes{
+	width:120px;
+	height:150px;
+	position: absolute;
+	left: 10px;
+	top: 280px;
+}
